@@ -73,10 +73,12 @@
 <addon id="plugin.video.filmibynature" name="Filmi BY NATURE"
 	version="1.9.0" provider-name="AJ">
 	<requires>
-		<import addon="xbmc.python" version="1.0" />
+		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
+		<import addon="script.module.beautifulsoup" version="3.2.0" />
+		<import addon="script.module.turtle" version="1.0.9" />
 	</requires>
-	<extension point="xbmc.python.pluginsource" library="default.py">
+	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
 		<provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
@@ -120,12 +122,12 @@
 </addon>
 
 <addon id="plugin.video.TVonDesiZone" name="TV on DESI ZONE"
-	version="1.3.0" provider-name="AJ">
+	version="1.3.1" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtle" version="1.0.0" />
+		<import addon="script.module.turtle" version="1.0.9" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
 		<provides>video</provides>
@@ -196,12 +198,13 @@
 	</extension>
 </addon>
 
-<addon id="script.module.turtle" name="Turtle" version="1.0.9"
+<addon id="script.module.turtle" name="Turtle" version="1.1.0"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
+		<import addon="script.module.urlresolver" version="0.0.1" />
 	</requires>
 	<extension point="xbmc.python.module" library="lib" />
 	<extension point="xbmc.addon.metadata">
